# shelf

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  config.toml  main.py  makefile  package.json  pyproject.toml  tailwind.config.js
app/: main.py  models.py  sse.py  writer.py
app/routes/: habits.py  media.py  tasks.py  workout.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  input.css  main.tsx  styles.ts
frontend/src/api/: client.ts  enums.ts  habits.ts  media.ts  tasks.ts  templates.ts  workouts.ts
frontend/src/components/: ActivityInput.tsx  ActivityModal.tsx  AllHabitsList.tsx  ChatPanel.tsx  ConfirmDelete.tsx  DayDetailModal.tsx  ExpandCollapse.tsx  GroupsEditor.tsx  HabitCalendar.tsx  HabitList.tsx  HabitModal.tsx  HabitSection.tsx  HabitSettingsModal.tsx  Header.tsx  MediaCard.tsx  MediaModal.tsx  MediaSection.tsx  MediaTable.tsx  Modal.tsx  PresetsModal.tsx  PresetsPanel.tsx  SaveTemplateDialog.tsx  SlideOver.tsx  TaskInlineForm.tsx  TaskItem.tsx  TaskModal.tsx  TaskSection.tsx  TemplateFormModal.tsx  ThemeToggle.tsx  WorkoutCalendar.tsx  WorkoutCard.tsx  WorkoutFormModal.tsx  WorkoutSection.tsx  WorkoutTemplates.tsx  WorkoutViewModal.tsx
frontend/src/hooks/: useSSE.ts  (+2 more)
src/: input.css
templates/: base.html  index.html  media_items.html
templates/partials/: media_card.html  media_list.html  modal_form.html  workout_calendar.html  workout_card.html  workout_exercise_form.html  workout_group_form.html  workout_list.html  workout_modal_form.html  workout_modal_view.html  workout_set_form.html  workout_templates.html
(+5 files in other folders)
